set(SWIFTEN_SRCS
  Base/Debug.cpp
  Chat/ChatStateTracker.cpp
  Chat/ChatStateNotifier.cpp
  Client/ClientSessionStanzaChannel.cpp
  Client/CoreClient.cpp
  Client/Client.cpp
  Client/ClientXMLTracer.cpp
  Client/ClientSession.cpp
  Client/BlockList.cpp
  Client/BlockListImpl.cpp
  Client/ClientBlockListManager.cpp
  Client/MemoryStorages.cpp
  Client/NickResolver.cpp
  Client/NickManager.cpp
  Client/NickManagerImpl.cpp
  Client/Storages.cpp
  Client/XMLBeautifier.cpp
  Compress/ZLibCodecompressor.cpp
  Compress/ZLibDecompressor.cpp
  Compress/ZLibCompressor.cpp
  Elements/CarbonsEnable.cpp
  Elements/CarbonsDisable.cpp
  Elements/CarbonsPrivate.cpp
  Elements/CarbonsReceived.cpp
  Elements/CarbonsSent.cpp
  Elements/DiscoInfo.cpp
  Elements/Presence.cpp
  Elements/Form.cpp
  Elements/FormField.cpp
  Elements/FormPage.cpp
  Elements/FormSection.cpp
  Elements/FormText.cpp
  Elements/StreamFeatures.cpp
  Elements/Element.cpp
  Elements/ToplevelElement.cpp
  Elements/IQ.cpp
  Elements/Payload.cpp
  Elements/PubSubPayload.cpp
  Elements/PubSubOwnerPayload.cpp
  Elements/PubSubEventPayload.cpp
  Elements/ReferencePayload.cpp
  Elements/RosterItemExchangePayload.cpp
  Elements/RosterPayload.cpp
  Elements/SecurityLabel.cpp
  Elements/Stanza.cpp
  Elements/StanzaAck.cpp
  Elements/StatusShow.cpp
  Elements/StreamManagementEnabled.cpp
  Elements/StreamResume.cpp
  Elements/StreamResumed.cpp
  Elements/UserLocation.cpp
  Elements/UserTune.cpp
  Elements/VCard.cpp
  Elements/MUCOccupant.cpp
  Elements/ResultSet.cpp
  Elements/Forwarded.cpp
  Elements/MAMResult.cpp
  Elements/MAMQuery.cpp
  Elements/MAMFin.cpp
  Elements/Thread.cpp
  Elements/IsodeIQDelegation.cpp
  Entity/Entity.cpp
  Entity/PayloadPersister.cpp
  MIX/MIX.cpp
  MIX/MIXImpl.cpp
  MUC/MUC.cpp
  MUC/MUCImpl.cpp
  MUC/MUCManager.cpp
  MUC/MUCRegistry.cpp
  MUC/MUCBookmarkManager.cpp
  PubSub/PubSubManager.cpp
  PubSub/PubSubManagerImpl.cpp
  Queries/IQChannel.cpp
  Queries/IQHandler.cpp
  Queries/IQRouter.cpp
  Queries/Request.cpp
  Queries/Responders/SoftwareVersionResponder.cpp
  Roster/RosterStorage.cpp
  Roster/RosterMemoryStorage.cpp
  Roster/XMPPRoster.cpp
  Roster/XMPPRosterImpl.cpp
  Roster/XMPPRosterController.cpp
  Serializer/AuthRequestSerializer.cpp
  Serializer/AuthSuccessSerializer.cpp
  Serializer/AuthChallengeSerializer.cpp
  Serializer/AuthResponseSerializer.cpp
  Serializer/CompressRequestSerializer.cpp
  Serializer/ElementSerializer.cpp
  Serializer/MessageSerializer.cpp
  Serializer/StreamManagementEnabledSerializer.cpp
  Serializer/StreamResumeSerializer.cpp
  Serializer/StreamResumedSerializer.cpp
  Serializer/ComponentHandshakeSerializer.cpp
  Serializer/PayloadSerializer.cpp
  Serializer/PayloadSerializerCollection.cpp
  Serializer/PayloadSerializers/IBBSerializer.cpp
  Serializer/PayloadSerializers/CapsInfoSerializer.cpp
  Serializer/PayloadSerializers/CarbonsDisableSerializer.cpp
  Serializer/PayloadSerializers/CarbonsEnableSerializer.cpp
  Serializer/PayloadSerializers/CarbonsPrivateSerializer.cpp
  Serializer/PayloadSerializers/CarbonsSentSerializer.cpp
  Serializer/PayloadSerializers/CarbonsReceivedSerializer.cpp
  Serializer/PayloadSerializers/ChatStateSerializer.cpp
  Serializer/PayloadSerializers/ClientStateSerializer.cpp
  Serializer/PayloadSerializers/DiscoInfoSerializer.cpp
  Serializer/PayloadSerializers/DiscoItemsSerializer.cpp
  Serializer/PayloadSerializers/ErrorSerializer.cpp
  Serializer/PayloadSerializers/FullPayloadSerializerCollection.cpp
  Serializer/PayloadSerializers/MIXParticipantSerializer.cpp
  Serializer/PayloadSerializers/MIXSetNickSerializer.cpp
  Serializer/PayloadSerializers/MIXRegisterNickSerializer.cpp
  Serializer/PayloadSerializers/MIXDestroySerializer.cpp
  Serializer/PayloadSerializers/MIXCreateSerializer.cpp
  Serializer/PayloadSerializers/MIXPayloadSerializer.cpp
  Serializer/PayloadSerializers/MIXUserPreferenceSerializer.cpp
  Serializer/PayloadSerializers/MIXLeaveSerializer.cpp
  Serializer/PayloadSerializers/MIXJoinSerializer.cpp
  Serializer/PayloadSerializers/MIXUpdateSubscriptionSerializer.cpp
  Serializer/PayloadSerializers/MUCPayloadSerializer.cpp
  Serializer/PayloadSerializers/MUCUserPayloadSerializer.cpp
  Serializer/PayloadSerializers/MUCAdminPayloadSerializer.cpp
  Serializer/PayloadSerializers/MUCOwnerPayloadSerializer.cpp
  Serializer/PayloadSerializers/MUCDestroyPayloadSerializer.cpp
  Serializer/PayloadSerializers/MUCInvitationPayloadSerializer.cpp
  Serializer/PayloadSerializers/ReferencePayloadSerializer.cpp
  Serializer/PayloadSerializers/ResourceBindSerializer.cpp
  Serializer/PayloadSerializers/RosterItemExchangeSerializer.cpp
  Serializer/PayloadSerializers/RosterSerializer.cpp
  Serializer/PayloadSerializers/SecurityLabelSerializer.cpp
  Serializer/PayloadSerializers/SecurityLabelsCatalogSerializer.cpp
  Serializer/PayloadSerializers/SoftwareVersionSerializer.cpp
  Serializer/PayloadSerializers/StreamInitiationSerializer.cpp
  Serializer/PayloadSerializers/BytestreamsSerializer.cpp
  Serializer/PayloadSerializers/VCardSerializer.cpp
  Serializer/PayloadSerializers/VCardUpdateSerializer.cpp
  Serializer/PayloadSerializers/StorageSerializer.cpp
  Serializer/PayloadSerializers/PrivateStorageSerializer.cpp
  Serializer/PayloadSerializers/DelaySerializer.cpp
  Serializer/PayloadSerializers/CommandSerializer.cpp
  Serializer/PayloadSerializers/InBandRegistrationPayloadSerializer.cpp
  Serializer/PayloadSerializers/SearchPayloadSerializer.cpp
  Serializer/PayloadSerializers/FormSerializer.cpp
  Serializer/PayloadSerializers/NicknameSerializer.cpp
  Serializer/PayloadSerializers/JingleFileTransferDescriptionSerializer.cpp
  Serializer/PayloadSerializers/JinglePayloadSerializer.cpp
  Serializer/PayloadSerializers/JingleContentPayloadSerializer.cpp
  Serializer/PayloadSerializers/JingleFileTransferHashSerializer.cpp
  Serializer/PayloadSerializers/JingleIBBTransportPayloadSerializer.cpp
  Serializer/PayloadSerializers/JingleS5BTransportPayloadSerializer.cpp
  Serializer/PayloadSerializers/StreamInitiationFileInfoSerializer.cpp
  Serializer/PayloadSerializers/DeliveryReceiptSerializer.cpp
  Serializer/PayloadSerializers/DeliveryReceiptRequestSerializer.cpp
  Serializer/PayloadSerializers/UserLocationSerializer.cpp
  Serializer/PayloadSerializers/UserTuneSerializer.cpp
  Serializer/PayloadSerializers/WhiteboardSerializer.cpp
  Serializer/PayloadSerializers/ResultSetSerializer.cpp
  Serializer/PayloadSerializers/ForwardedSerializer.cpp
  Serializer/PayloadSerializers/MAMFinSerializer.cpp
  Serializer/PayloadSerializers/MAMResultSerializer.cpp
  Serializer/PayloadSerializers/MAMQuerySerializer.cpp
  Serializer/PayloadSerializers/IsodeIQDelegationSerializer.cpp
  Serializer/PayloadSerializers/JingleFileTransferFileInfoSerializer.cpp
  Serializer/PayloadSerializers/ThreadSerializer.cpp
  Serializer/PresenceSerializer.cpp
  Serializer/StanzaSerializer.cpp
  Serializer/StreamErrorSerializer.cpp
  Serializer/StreamFeaturesSerializer.cpp
  Serializer/XML/XMLElement.cpp
  Serializer/XML/XMLNode.cpp
  Serializer/XMPPSerializer.cpp
  Session/Session.cpp
  Session/SessionTracer.cpp
  Session/SessionStream.cpp
  Session/BasicSessionStream.cpp
  Session/BOSHSessionStream.cpp
  StringCodecs/Base64.cpp
  StringCodecs/Hexify.cpp
  Whiteboard/WhiteboardResponder.cpp
  Whiteboard/WhiteboardSession.cpp
  Whiteboard/IncomingWhiteboardSession.cpp
  Whiteboard/OutgoingWhiteboardSession.cpp
  Whiteboard/WhiteboardSessionManager.cpp
  Whiteboard/WhiteboardServer.cpp
  Whiteboard/WhiteboardClient.cpp
  Elements/Whiteboard/WhiteboardColor.cpp
  Whiteboard/WhiteboardTransformer.cpp

  JID/JID.cpp
  Base/ByteArray.cpp
  Base/DateTime.cpp
  Base/Error.cpp
  Base/FileSize.cpp
  Base/IDGenerator.cpp
  Base/Log.cpp
  Base/LogSerializers.cpp
  Base/Path.cpp
  Base/Paths.cpp
  Base/RandomGenerator.cpp
  Base/Regex.cpp
  Base/SafeAllocator.cpp
  Base/SafeByteArray.cpp
  Base/SimpleIDGenerator.cpp
  Base/StdRandomGenerator.cpp
  Base/String.cpp
  Base/URL.cpp
  Base/sleep.cpp

  AdHoc/OutgoingAdHocCommandSession.cpp

  TLS/Certificate.cpp
  TLS/CertificateFactory.cpp
  TLS/CertificateTrustChecker.cpp
  TLS/PrivateKey.cpp
  TLS/ServerIdentityVerifier.cpp
  TLS/TLSContext.cpp
  TLS/TLSContextFactory.cpp
  TLS/OpenSSL/OpenSSLContext.cpp
  TLS/OpenSSL/OpenSSLCertificate.cpp
  TLS/OpenSSL/OpenSSLContextFactory.cpp
  TLS/OpenSSL/OpenSSLCertificateFactory.cpp
  TLS/PlatformTLSFactories.cpp

  Network/ProxiedConnection.cpp
  Network/HTTPConnectProxiedConnection.cpp
  Network/HTTPConnectProxiedConnectionFactory.cpp
  Network/SOCKS5ProxiedConnection.cpp
  Network/SOCKS5ProxiedConnectionFactory.cpp
  Network/BoostConnection.cpp
  Network/BoostConnectionFactory.cpp
  Network/BoostConnectionServer.cpp
  Network/BoostConnectionServerFactory.cpp
  Network/BoostIOServiceThread.cpp
  Network/BOSHConnection.cpp
  Network/BOSHConnectionPool.cpp
  Network/CachingDomainNameResolver.cpp
  Network/ConnectionFactory.cpp
  Network/ConnectionServer.cpp
  Network/ConnectionServerFactory.cpp
  Network/DummyConnection.cpp
  Network/FakeConnection.cpp
  Network/ChainedConnector.cpp
  Network/Connector.cpp
  Network/Connection.cpp
  Network/TimerFactory.cpp
  Network/DummyTimerFactory.cpp
  Network/BoostTimerFactory.cpp
  Network/DomainNameResolver.cpp
  Network/DomainNameAddressQuery.cpp
  Network/DomainNameServiceQuery.cpp
  Network/StaticDomainNameResolver.cpp
  Network/HostAddress.cpp
  Network/HostAddressPort.cpp
  Network/HostNameOrAddress.cpp
  Network/NetworkFactories.cpp
  Network/BoostNetworkFactories.cpp
  Network/NetworkEnvironment.cpp
  Network/Timer.cpp
  Network/TLSConnection.cpp
  Network/TLSConnectionFactory.cpp
  Network/BoostTimer.cpp
  Network/ProxyProvider.cpp
  Network/NullProxyProvider.cpp
  Network/NATTraverser.cpp
  Network/NullNATTraverser.cpp
  Network/NATTraversalGetPublicIPRequest.cpp
  Network/NATTraversalForwardPortRequest.cpp
  Network/NATTraversalRemovePortForwardingRequest.cpp
  Network/NATTraversalInterface.cpp
  Network/HTTPTrafficFilter.cpp
)

add_library(swiften ${SWIFTEN_SRCS})
target_include_directories(swiften PRIVATE ../)

